fix: z-index from covering FAQ, etc...

--- a/component/Sales.styl
+++ b/component/Sales.styl
@@ -11,7 +11,6 @@ body
     left 0
     right 0
     bottom 0
-    z-index 1
     img
       width 100%
       min-height 1015px
